# appgates

./: .env  .env.backup2  .env.example  .gitignore  ENTERPRISE_LLM_SETUP.md  ENVIRONMENT_VARIABLES_SUMMARY.md  HYBRID_VALIDATION_SUMMARY.md  PATTERN_MATCHING_IMPROVEMENTS.md  README.md  SPLUNK_INTEGRATION.md  URL_ENHANCEMENT_SUMMARY.md  demo_export_functionality.py  example_required_optional_conditions.json  file_scanner.bat  fix_indentation.py  fix_pattern.py  generate_pdf.py  install_enhanced_features.py  install_pdf_support.py  jira.env  llm_prompt_20250713_012251.txt  main.py  output.json  package-lock.json  requirements.txt  requirements_enhanced.txt  run_integrated_server.py  run_simple_app.py  scan.py  scan_repository.bat  scan_repository.py  simple_server.py  start_server_with_jira.sh  test_api_validation.py  test_backward_compatibility.py  test_comments_and_jira.py  test_config.py  test_criteria_evaluation.py  test_current_system.py  test_enhanced_coverage.py  (+43 more)
agent/: .env copy  __init__.py  adk.yaml  codegates_agent.py  litellm_config.py  pyproject.toml  quick_start.sh  run_agent.py  test_agent.py
backup/: APPDYNAMICS_ANALYSIS_SUMMARY.md  APPDYNAMICS_INTEGRATION.md  COMPREHENSIVE_ENHANCEMENT_SUMMARY.md  ENVIRONMENT_CONFIGURATION.md  JIRA_ANALYSIS_SUMMARY.md  JIRA_INTEGRATION.md  README.md  SPLUNK_ANALYSIS_SUMMARY.md  VSCODE_EXTENSION_ENHANCEMENT_SUMMARY.md  api_curl_commands.md  codebase_analysis.json  fix_infinite_loop.py  github_keyword_search.py  meta.py  myllm.py  output.txt  processor.py  requirements.txt  test_appdynamics_integration.py  test_codegates_local_llm.py  test_comprehensive_analysis.py  (+7 more)
(+1997 files in other folders)
